# SystemIntegration

./: .gitignore
00_miscellaneous/: encode.js  iframe.html
00_miscellaneous/learning_goals/: 01_alternatives_to_rest.md  02_run_node_python_files.md  03_python_environments.md  04_poetry.md  05_encoding_serializing_marshalling.md  06_date.md  07_communication_protocols.md  08_ngrok.md  09_environment_variables.md  10_database_documentation.md  12_polling.md  13_SSE_websocket.md  14_event_driven_architecture.md  15_redis.md  16_medias.md  17_web_scraping.md
00_miscellaneous/poetry2/: pyproject.toml
01_modules/html_module/: index.js  my_module.js
01_modules/html_nomodule/: index.html  index.js
01_modules/node_commonjs/: index.js  my_module.js
01_modules/node_esmodules/: index.js  my_module.js
02_data_formats/: me.xml
02_parsing_data_formats/: me.csv  me.json  me.txt  me.yaml
02_parsing_data_formats/homework/rust/: Cargo.toml
02_parsing_data_formats/homework/rust/src/: main.rs  models.rs
02_parsing_data_formats/homework/rust/src/parsers/: csv_parser.rs  json_parser.rs  txt_parser.rs  xml_parser.rs  yaml_parser.rs
04_basic_servers/homework/python/: main.py  pyproject.toml
04_basic_servers/homework/python/parsers/: __init__.py  csv_parser.py  json_parser.py  pickle_parser.py  txt_parser.py  xml_parser.py  yaml_parser.py
04_basic_servers/homework/python/public/: index.html
04_basic_servers/python/: main.py
08_database_documentation/: dump.sql
09_OpenAPI/: openapi.html
09_OpenAPI/homework/: app.js  package-lock.json  package.json  router.js  swagger-schema-definitions.js
09_OpenAPI/node/: package-lock.json  package.json
09_OpenAPI/python/: main.py  pyproject.toml
12_server-sent_events/assignment/: app.js
12_server-sent_events/node/: app.js
12_server-sent_events/python/: main.py  pyproject.toml
13_github_webhooks/node/: app.js  package.json
13_github_webhooks/python/: main.py  pyproject.toml
15_websockets/node/: client.js  index.html  server.js
15_websockets/python/: main.py  pyproject.toml
16_CORS/: index.html
16_CORS/node/: app.js
16_CORS/python/: main.py  pyproject.toml
17_multipart-forms/: index.html
17_multipart-forms/node/: app.js
17_multipart-forms/python/: main.py  pyproject.toml
17_multipart-forms/rust/: Cargo.toml
17_multipart-forms/rust/src/: main.rs
18_base64_images/: file  index.html
19_embedded_yt/: index.html
20_redis/node/: index.js  package-lock.json  pubsub.js  setget.js
20_redis/python/pub_sub/: publisher.py  pyproject.toml  subscriber.py
20_redis/python/task_queues/: pyproject.toml  utils.py
21_web_scraping/node/: index.js
21_web_scraping/python/data_scraping/: data_scraper.py  pyproject.toml
21_web_scraping/python/scrapy_wiki/: pyproject.toml
21_web_scraping/python/scrapy_wiki/wikicrawler/wikicrawler/spiders/: WikiSpider.py
21_web_scraping/python/scrapy_wiki/wikicrawler/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
21_web_scraping/python/web_crawler/: pyproject.toml  web_crawler.py
22_graphql/homework/: data.js  index.js  package-lock.json  package.json
22_graphql/node/: index.js  schema.graphql
23_sqlite/node/: index.js
easter_homework/: system_urgencies.md  url_shortener_architecture.md
mandatory_01/database/: data.sql  dump.sql
mandatory_01/documentation/: package.json
mandatory_01/part_ii/: package-lock.json  (+2 more)
mandatory_02/: Dockerfile  README.md  stop.sh
mandatory_02_II_web_scraper/: Cargo.toml  README.md
mandatory_02_II_web_scraper/src/: database.rs  html.rs  main.rs  spider.rs
sms_service/: Cargo.toml  README.md  package-lock.json
(+98 files in other folders)
