[package]
name = "mandatory_02_ii_web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
scraper = "0.16.0"
tokio = { version = "1.28.1", features = ["full"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
webbrowser = "0.8.9"
