[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
serde = "1.0.162"
serde_json = "1.0.96"
uuid = { version="1.3.2", features = ["v4"] }
actix-files = "0.6.2"
