[package]
name = "data_formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
serde = "1.0.162"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.162"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
