[tool.poetry]
name = "scrapy-wiki"
version = "0.1.0"
description = ""
authors = ["Lars Riel <larsriel@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapy_wiki"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
